syntax = "proto3";

option go_package = "github.com/almeida-raphael/arpc_examples";

message TypeInt32 {
  int32     int32 = 1;
}
